--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "prettier": "^2.8.2"
   }
 }
