--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "prettier": "^2.8.2"
